test/fixtures/success/unwrapping-complex/actual.js
<SVG svgName="some-path/foobar" />
