test/fixtures/error/invalid-unwrapped-file/actual.js
<SVG svgName="some-path/invalid" />
